Added Change size of grid

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 <body>
     <header>Etch-a-Sketch</header>
     <div class="main-body">
-        <div class="settings"></div>
+        <div class="settings">
+            <button class="clear">Clear Grid</button>
+            <div>
+                <label for="user-size">Change Size:</label>
+                <input type="text" class="user-size" id="user-size">
+                <button class="change-size">Change</button>
+            </div>
+        </div>
 
         <div class="canvas-main">
             <div class="canvas" id="canvas">
