--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header>Etch-a-Sketch</header>
     <div class="main-body">
         <div class="settings">
+            <button class="toggle-lines">Toggle Grid Lines</button>
             <button class="clear">Clear Grid</button>
-            <div>
-                <label for="user-size">Change Size:</label>
-                <input type="text" class="user-size" id="user-size">
-                <button class="change-size">Change</button>
+            <div class="slidecontainer">
+                <p class="size-text"></p>
+                <input type="range" min="1" max="100" value="16" class="slider" id="myRange">
             </div>
         </div>
 
