--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     <header>Etch-a-Sketch</header>
     <div class="main-body">
         <div class="settings">
-            <button class="toggle-lines">Toggle Grid Lines</button>
-            <button class="clear">Clear Grid</button>
-            <div class="slidecontainer">
+            <p class="pad">Pick a Colour</p>
+            <input type="color" class="color-picker pad" value="#000000">
+            <button class="rainbow pad">Rainbow Mode</button>
+            <button class="toggle-lines pad">Toggle Grid Lines</button>
+            <button class="clear pad">Clear Grid</button>
+            <div class="slidecontainer pad">
                 <p class="size-text"></p>
                 <input type="range" min="1" max="100" value="16" class="slider" id="myRange">
             </div>
