--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    <header>Etch-a-Sketch</header>
+    <header class="header">Etch-a-Sketch</header>
     <div class="main-body">
         <div class="settings">
             <p class="pad">Pick a Colour</p>
             <input type="color" class="color-picker pad" value="#000000">
+            <button class="shading pad">Color Shading</button>
             <button class="rainbow pad">Rainbow Mode</button>
             <button class="toggle-lines pad">Toggle Grid Lines</button>
             <button class="clear pad">Clear Grid</button>
