Added eraser and fixed shading

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <button class="shading pad">Color Shading</button>
             <button class="rainbow pad">Rainbow Mode</button>
             <button class="toggle-lines pad">Toggle Grid Lines</button>
+            <button class="eraser pad">Eraser</button>
             <button class="clear pad">Clear Grid</button>
             <div class="slidecontainer pad">
                 <p class="size-text"></p>
